# experiments-bp

./: README.md
x-gen/: .gitignore  Cargo.toml  LICENSE  README.md
x-gen/experiments/templates/basic/: FOLLOW_UP_PROMPT.md  README.md  basic.toml
x-gen/src/: main.rs  parser.rs
