[package]
name = "x-gen"
version = "1.0.1"
edition = "2021"
authors = ["Edgar Torres <edgar.torres@ki.uni-stuttgart.de>"]
license = "MIT"
description = "X-Gen - AI Agent Experiment Structure Generator for standardization of research workflows"
repository = "https://github.com/yoelt11/experiments-bp"
homepage = "https://github.com/yoelt11/experiments-bp"
documentation = "https://docs.rs/x-gen"
readme = "README.md"
keywords = ["cli", "experiments", "research", "template", "generator"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.101"
clap = {"version"= "4.5.58", "features"= ["derive"]}
serde = "1.0.228"
toml = "0.8"
dirs = "5.0"
